--- a/Home.css
+++ b/Home.css
@@ -188,7 +188,11 @@
 
 @media (max-width: 767px) {
    .u-section-1 {
-    min-height: 3407px;
+    min-height: 2649px;
+  }
+
+  .u-section-1 .u-shape-1 {
+    margin-top: 1px;
   }
 
   .u-section-1 .u-group-1 {
@@ -214,6 +218,7 @@
 
   .u-section-1 .u-layout-wrap-1 {
     width: 540px;
+    margin-bottom: 1px;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -235,7 +240,7 @@
   }
 
   .u-section-1 .u-image-2 {
-    min-height: 759px;
+    min-height: 699px;
   }
 
   .u-section-1 .u-container-layout-4 {
@@ -246,11 +251,18 @@
   .u-section-1 .u-layout-cell-4 {
     min-height: 759px;
   }
+
+  .u-section-1 .u-image-3 {
+    width: 342px;
+    height: 417px;
+    margin-top: 29px;
+    margin-right: 30px;
+  }
 }
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 2283px;
+    min-height: 1905px;
   }
 
   .u-section-1 .u-group-1 {
@@ -286,193 +298,220 @@
   }
 
   .u-section-1 .u-image-2 {
-    min-height: 478px;
+    min-height: 440px;
   }
 
   .u-section-1 .u-layout-cell-4 {
     min-height: 478px;
   }
+
+  .u-section-1 .u-image-3 {
+    width: 301px;
+    height: 410px;
+    margin-top: 38px;
+    margin-right: -3px;
+  }
 }.u-section-2 .u-sheet-1 {
-  min-height: 706px;
+  min-height: 689px;
 }
 
-.u-section-2 .u-products-1 {
-  margin-top: 40px;
-  margin-bottom: 0;
+.u-section-2 .u-list-1 {
+  grid-template-rows: auto;
+  margin-top: 43px;
+  margin-bottom: 60px;
 }
 
 .u-section-2 .u-repeater-1 {
   grid-template-columns: 33.3333% 33.3333% 33.3333%;
+  min-height: 453px;
   grid-gap: 0px 0px;
-  min-height: 723px;
-}
-
-.u-section-2 .u-repeater-item-1 {
-  background-image: none;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 27px 30px;
+  padding: 20px 10px;
 }
 
 .u-section-2 .u-image-1 {
-  height: 301px;
-  margin-top: 27px;
+  height: 366px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 .u-section-2 .u-text-1 {
-  --animation-custom_in-translate_x: -200px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  font-weight: normal;
-  margin: 11px 1px 0 0;
-}
-
-.u-section-2 .u-btn-1 {
-  background-image: none;
-  border-style: none;
-  font-weight: 700;
-  font-size: 1rem;
-  margin: 27px auto 0 64px;
-}
-
-.u-section-2 .u-repeater-item-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 27px 30px;
-}
-
-.u-section-2 .u-image-2 {
-  height: 301px;
-  margin-top: 27px;
-  margin-bottom: 0;
+  margin: 52px auto 0 36px;
 }
 
 .u-section-2 .u-text-2 {
-  --animation-custom_in-translate_x: -200px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  font-size: 1rem;
-  font-weight: normal;
-  margin: 11px 1px 0 0;
+  margin: 18px 20px 0;
 }
 
-.u-section-2 .u-btn-2 {
-  background-image: none;
+.u-section-2 .u-btn-1 {
+  font-size: 0.875rem;
+  letter-spacing: 1px;
   border-style: none;
+  text-transform: uppercase;
   font-weight: 700;
-  font-size: 1rem;
-  margin: 27px auto 0 64px;
-}
-
-.u-section-2 .u-repeater-item-3 {
   background-image: none;
+  margin: 18px auto 0;
+  padding: 1px 1px 3px 0;
 }
 
-.u-section-2 .u-container-layout-3 {
-  padding: 27px 30px;
+.u-section-2 .u-container-layout-2 {
+  padding: 20px 10px;
 }
 
-.u-section-2 .u-image-3 {
-  height: 301px;
-  margin-top: 27px;
+.u-section-2 .u-image-2 {
+  height: 366px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 .u-section-2 .u-text-3 {
-  --animation-custom_in-translate_x: -200px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
-  font-size: 1rem;
-  font-weight: normal;
-  margin: 11px 1px 0 0;
+  margin: 52px auto 0 36px;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 18px 20px 0;
+}
+
+.u-section-2 .u-btn-2 {
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  border-style: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 18px auto 0;
+  padding: 1px 1px 3px 0;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 20px 10px;
+}
+
+.u-section-2 .u-image-3 {
+  height: 366px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-2 .u-text-5 {
+  margin: 52px auto 0 36px;
+}
+
+.u-section-2 .u-text-6 {
+  margin: 18px 20px 0;
 }
 
 .u-section-2 .u-btn-3 {
-  background-image: none;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
   border-style: none;
+  text-transform: uppercase;
   font-weight: 700;
-  font-size: 1rem;
-  margin: 27px auto 0 64px;
+  background-image: none;
+  margin: 18px auto 0;
+  padding: 1px 1px 3px 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 509px;
-  }
-
-  .u-section-2 .u-products-1 {
-    height: auto;
-  }
-
   .u-section-2 .u-repeater-1 {
-    min-height: 520px;
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 374px;
   }
 
-  .u-section-2 .u-text-1 {
-    margin-top: 20px;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin-top: 20px;
-    margin-left: 0;
-    padding: 0;
+  .u-section-2 .u-image-1 {
+    height: 298px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-top: 20px;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-top: 20px;
     margin-left: 0;
     margin-right: 0;
-    padding: 0;
   }
 
-  .u-section-2 .u-text-3 {
-    margin-top: 20px;
-    margin-right: 0;
+  .u-section-2 .u-image-2 {
+    height: 298px;
   }
 
-  .u-section-2 .u-btn-3 {
-    margin-top: 20px;
+  .u-section-2 .u-text-4 {
     margin-left: 0;
     margin-right: 0;
-    padding: 0;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 298px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1066px;
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 859px;
   }
 
-  .u-section-2 .u-repeater-1 {
-    grid-template-columns: 50% 50%;
+  .u-section-2 .u-image-1 {
+    height: 345px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-left: 40px;
+    width: auto;
+    margin-top: 62px;
+    margin-left: 33px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-left: 40px;
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-top: 16px;
+    margin-left: 103px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 345px;
   }
 
   .u-section-2 .u-text-3 {
-    margin-left: 40px;
+    width: auto;
+    margin-top: 62px;
+    margin-left: 33px;
+  }
+
+  .u-section-2 .u-text-4 {
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-top: 16px;
+    margin-left: 103px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 345px;
+  }
+
+  .u-section-2 .u-text-5 {
+    width: auto;
+    margin-top: 62px;
+    margin-left: 33px;
+  }
+
+  .u-section-2 .u-text-6 {
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-top: 16px;
+    margin-left: 103px;
   }
 }
 
@@ -481,72 +520,86 @@
     grid-template-columns: 100%;
   }
 
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-2 .u-image-1 {
-    height: 506px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-top: -258px;
+    height: 528px;
   }
 
   .u-section-2 .u-btn-1 {
-    margin-top: 109px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-top: 9px;
+    margin-left: 43px;
   }
 
   .u-section-2 .u-image-2 {
-    height: 506px;
-  }
-
-  .u-section-2 .u-text-2 {
-    margin-top: 11px;
+    height: 528px;
   }
 
   .u-section-2 .u-btn-2 {
-    margin-top: 27px;
-  }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-top: 9px;
+    margin-left: 43px;
   }
 
   .u-section-2 .u-image-3 {
-    height: 506px;
-  }
-
-  .u-section-2 .u-text-3 {
-    margin-top: 11px;
+    height: 528px;
   }
 
   .u-section-2 .u-btn-3 {
-    margin-top: 27px;
+    margin-top: 9px;
+    margin-left: 43px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-image-1 {
-    height: 365px;
+    height: 307px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: 60px;
+    margin-left: 7px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 29px;
   }
 
   .u-section-2 .u-btn-1 {
-    margin-top: -34px;
+    margin-top: 29px;
+    margin-left: 0;
   }
 
   .u-section-2 .u-image-2 {
-    height: 365px;
+    height: 307px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-top: 60px;
+    margin-left: 7px;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-top: 29px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-top: 29px;
+    margin-left: 0;
   }
 
   .u-section-2 .u-image-3 {
-    height: 365px;
+    height: 307px;
+  }
+
+  .u-section-2 .u-text-5 {
+    margin-top: 60px;
+    margin-left: 7px;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-top: 29px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-top: 29px;
+    margin-left: 0;
   }
 }
