--- a/nicepage.css
+++ b/nicepage.css
@@ -36420,7 +36420,12 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-left: auto;
   }
 
+  .u-header .u-menu-1 {
+    margin-top: 20px;
+  }
+
   .u-header .u-social-icons-1 {
+    margin-top: 20px;
     margin-right: auto;
   }
 }
