--- a/Products.css
+++ b/Products.css
@@ -185,4 +185,171 @@
   .u-section-1 .u-image-3 {
     height: 317px;
   }
+}.u-section-2 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-2 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-2 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 20px 23px;
+}
+
+.u-section-2 .u-image-1 {
+  height: 250px;
+  width: 320px;
+  margin: 7px 0 0 auto;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 13px auto 0 7px;
+}
+
+.u-section-2 .u-text-2 {
+  margin: 20px 7px 0;
+}
+
+.u-section-2 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 7px;
+  padding: 8px 19px 8px 18px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 20px 23px;
+}
+
+.u-section-2 .u-image-2 {
+  height: 250px;
+  width: 320px;
+  margin: 7px 0 0 auto;
+}
+
+.u-section-2 .u-text-3 {
+  margin: 13px auto 0 7px;
+}
+
+.u-section-2 .u-text-4 {
+  margin: 20px 7px 0;
+}
+
+.u-section-2 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 7px;
+  padding: 8px 19px 8px 18px;
+}
+
+.u-section-2 .u-container-layout-3 {
+  padding: 20px 23px;
+}
+
+.u-section-2 .u-image-3 {
+  height: 250px;
+  width: 320px;
+  margin: 7px 0 0 auto;
+}
+
+.u-section-2 .u-text-5 {
+  margin: 13px auto 0 7px;
+}
+
+.u-section-2 .u-text-6 {
+  margin: 20px 7px 0;
+}
+
+.u-section-2 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 7px;
+  padding: 8px 19px 8px 18px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
