--- a/Baby-Gear.css
+++ b/Baby-Gear.css
@@ -4,7 +4,7 @@
 
 .u-section-1 .u-list-1 {
   grid-template-rows: auto;
-  margin: 50px 0;
+  margin: 0 auto 0 20px;
 }
 
 .u-section-1 .u-repeater-1 {
@@ -14,11 +14,11 @@
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 20px 30px 20px 37px;
+  padding: 20px 0 20px 30px;
 }
 
 .u-section-1 .u-image-1 {
-  height: 256px;
+  height: 336px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -33,22 +33,22 @@
 }
 
 .u-section-1 .u-btn-1 {
-  font-size: 1rem;
+  font-size: 0.875rem;
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
-  padding: 2px 16px 3px 15px;
+  margin: 10px auto 0 0;
+  padding: 7px 7px 8px 6px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 20px 30px 20px 37px;
+  padding: 20px 0 20px 30px;
 }
 
 .u-section-1 .u-image-2 {
-  height: 256px;
+  height: 336px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -63,22 +63,22 @@
 }
 
 .u-section-1 .u-btn-2 {
-  font-size: 1rem;
+  font-size: 0.875rem;
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
-  padding: 2px 16px 3px 15px;
+  margin: 10px auto 0 0;
+  padding: 7px 7px 8px 6px;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 20px 30px 20px 37px;
+  padding: 20px 0 20px 30px;
 }
 
 .u-section-1 .u-image-3 {
-  height: 256px;
+  height: 336px;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -93,14 +93,14 @@
 }
 
 .u-section-1 .u-btn-3 {
-  font-size: 1rem;
+  font-size: 0.875rem;
   letter-spacing: 1px;
   border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 0;
-  padding: 2px 16px 3px 15px;
+  margin: 10px auto 0 0;
+  padding: 7px 7px 8px 6px;
 }
 
 @media (max-width: 1199px) {
@@ -111,50 +111,38 @@
 
   .u-section-1 .u-repeater-1 {
     grid-template-columns: repeat(3, 33.333333333333336%);
-    min-height: 309px;
+    min-height: 315px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 202px;
+    height: 272px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 202px;
+    height: 272px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 202px;
+    height: 272px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-repeater-1 {
     grid-template-columns: repeat(2, 50%);
-    min-height: 710px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 30px;
+    min-height: 724px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 246px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 30px;
+    height: 317px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 246px;
-  }
-
-  .u-section-1 .u-container-layout-3 {
-    padding-left: 30px;
+    height: 317px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 246px;
+    height: 317px;
   }
 }
 
@@ -165,42 +153,39 @@
 
   .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
-    padding-right: 10px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 426px;
+    height: 509px;
   }
 
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
-    padding-right: 10px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 426px;
+    height: 509px;
   }
 
   .u-section-1 .u-container-layout-3 {
     padding-left: 10px;
-    padding-right: 10px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 426px;
+    height: 509px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-image-1 {
-    height: 262px;
+    height: 317px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 262px;
+    height: 317px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 262px;
+    height: 317px;
   }
 }
