--- a/Baby-Gear.css
+++ b/Baby-Gear.css
@@ -20,12 +20,12 @@
 .u-section-1 .u-image-1 {
   height: 336px;
   width: 350px;
-  margin: -17px auto 0 -97px;
+  margin: 10px 1px 0 auto;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 700;
-  margin: 57px auto 0 30px;
+  margin: 30px auto 0 30px;
 }
 
 .u-section-1 .u-text-2 {
@@ -50,12 +50,12 @@
 .u-section-1 .u-image-2 {
   height: 336px;
   width: 350px;
-  margin: -17px auto 0 -97px;
+  margin: 10px 1px 0 auto;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
-  margin: 57px auto 0 30px;
+  margin: 30px auto 0 30px;
 }
 
 .u-section-1 .u-text-4 {
@@ -80,12 +80,12 @@
 .u-section-1 .u-image-3 {
   height: 336px;
   width: 350px;
-  margin: -17px auto 0 -97px;
+  margin: 10px 1px 0 auto;
 }
 
 .u-section-1 .u-text-5 {
   font-weight: 700;
-  margin: 57px auto 0 30px;
+  margin: 30px auto 0 30px;
 }
 
 .u-section-1 .u-text-6 {
@@ -137,6 +137,26 @@
 @media (max-width: 767px) {
   .u-section-1 .u-repeater-1 {
     grid-template-columns: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-image-1 {
+    height: 326px;
+    width: 340px;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 326px;
+    width: 340px;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-3 {
+    height: 326px;
+    width: 340px;
+    margin-right: 0;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 552px;
@@ -330,5 +350,201 @@
 
   .u-section-2 .u-image-3 {
     height: 316px;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-3 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-3 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-1 {
+  height: 310px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-1 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-size: 1rem;
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 1px 9px 3px 8px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-2 {
+  height: 310px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-3 .u-text-4 {
+  font-size: 1rem;
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 1px 9px 3px 8px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-3 .u-image-3 {
+  height: 310px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-5 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-3 .u-text-6 {
+  font-size: 1rem;
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 1px 9px 3px 8px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 245px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 245px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 245px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 290px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 290px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 290px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 503px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 503px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 503px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-image-1 {
+    height: 310px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 310px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 310px;
   }
 }
