--- a/Baby-Gear.css
+++ b/Baby-Gear.css
@@ -740,4 +740,337 @@
   .u-section-4 .u-image-3 {
     height: 340px;
   }
+}.u-section-5 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-5 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-5 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-5 .u-container-layout-1 {
+  padding: 19px 5px;
+}
+
+.u-section-5 .u-image-1 {
+  height: 456px;
+  width: 345px;
+  margin: 1px 25px 0;
+}
+
+.u-section-5 .u-text-1 {
+  font-weight: 700;
+  margin: 20px 13px 0;
+}
+
+.u-section-5 .u-text-2 {
+  margin: 20px 25px 0;
+}
+
+.u-section-5 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 25px;
+  padding: 2px 8px;
+}
+
+.u-section-5 .u-container-layout-2 {
+  padding: 19px 5px;
+}
+
+.u-section-5 .u-image-2 {
+  height: 456px;
+  width: 345px;
+  margin: 1px 25px 0;
+}
+
+.u-section-5 .u-text-3 {
+  font-weight: 700;
+  margin: 20px 13px 0;
+}
+
+.u-section-5 .u-text-4 {
+  margin: 20px 25px 0;
+}
+
+.u-section-5 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 25px;
+  padding: 2px 8px;
+}
+
+.u-section-5 .u-container-layout-3 {
+  padding: 19px 5px;
+}
+
+.u-section-5 .u-image-3 {
+  height: 456px;
+  width: 345px;
+  margin: 1px 25px 0;
+}
+
+.u-section-5 .u-text-5 {
+  font-weight: 700;
+  margin: 20px 13px 0;
+}
+
+.u-section-5 .u-text-6 {
+  margin: 20px 25px 0;
+}
+
+.u-section-5 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 25px;
+  padding: 2px 8px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-5 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-btn-1 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-btn-2 {
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-btn-3 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-image-1 {
+    height: 437px;
+    width: 331px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-image-2 {
+    height: 437px;
+    width: 331px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-image-3 {
+    height: 437px;
+    width: 331px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-6 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-6 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-6 .u-container-layout-1 {
+  padding: 20px 0;
+}
+
+.u-section-6 .u-image-1 {
+  height: 343px;
+  width: 320px;
+  margin: 0 auto 0 20px;
+}
+
+.u-section-6 .u-text-1 {
+  font-weight: 700;
+  margin: 20px auto 0 30px;
+}
+
+.u-section-6 .u-text-2 {
+  margin: 20px 30px 0;
+}
+
+.u-section-6 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 20px auto 0 30px;
+  padding: 2px 4px 2px 3px;
+}
+
+.u-section-6 .u-container-layout-2 {
+  padding: 20px 0;
+}
+
+.u-section-6 .u-image-2 {
+  height: 343px;
+  width: 320px;
+  margin: 0 auto 0 20px;
+}
+
+.u-section-6 .u-text-3 {
+  font-weight: 700;
+  margin: 20px auto 0 30px;
+}
+
+.u-section-6 .u-text-4 {
+  margin: 20px 30px 0;
+}
+
+.u-section-6 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 20px auto 0 30px;
+  padding: 2px 4px 2px 3px;
+}
+
+.u-section-6 .u-container-layout-3 {
+  padding: 20px 0;
+}
+
+.u-section-6 .u-image-3 {
+  height: 343px;
+  width: 320px;
+  margin: 0 auto 0 20px;
+}
+
+.u-section-6 .u-text-5 {
+  font-weight: 700;
+  margin: 20px auto 0 30px;
+}
+
+.u-section-6 .u-text-6 {
+  margin: 20px 30px 0;
+}
+
+.u-section-6 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: none;
+  margin: 20px auto 0 30px;
+  padding: 2px 4px 2px 3px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-6 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-6 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-left: 0;
+  }
+
+  .u-section-6 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-btn-2 {
+    margin-left: 0;
+  }
+
+  .u-section-6 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-6 .u-btn-3 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
 }
