--- a/Products.css
+++ b/Products.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 640px;
+  min-height: 552px;
 }
 
 .u-section-1 .u-list-1 {
@@ -14,18 +14,18 @@
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 20px 30px;
+  padding: 19px 30px;
 }
 
 .u-section-1 .u-image-1 {
-  height: 300px;
+  height: 340px;
   margin-top: 0;
   margin-bottom: 0;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 21px auto 0 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -35,27 +35,27 @@
 .u-section-1 .u-btn-1 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: none none solid;
+  border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 14px 2px 13px;
+  padding: 2px 8px 2px 6px;
 }
 
 .u-section-1 .u-container-layout-2 {
-  padding: 20px 30px;
+  padding: 19px 30px;
 }
 
 .u-section-1 .u-image-2 {
-  height: 300px;
+  height: 340px;
   margin-top: 0;
   margin-bottom: 0;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 21px auto 0 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -65,27 +65,27 @@
 .u-section-1 .u-btn-2 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: none none solid;
+  border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 14px 2px 13px;
+  padding: 2px 8px 2px 6px;
 }
 
 .u-section-1 .u-container-layout-3 {
-  padding: 20px 30px;
+  padding: 19px 30px;
 }
 
 .u-section-1 .u-image-3 {
-  height: 300px;
+  height: 340px;
   margin-top: 0;
   margin-bottom: 0;
 }
 
 .u-section-1 .u-text-5 {
   font-weight: 700;
-  margin: 20px auto 0 0;
+  margin: 21px auto 0 0;
 }
 
 .u-section-1 .u-text-6 {
@@ -95,12 +95,12 @@
 .u-section-1 .u-btn-3 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: none none solid;
+  border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
   margin: 20px auto 0 0;
-  padding: 2px 14px 2px 13px;
+  padding: 2px 8px 2px 6px;
 }
 
 @media (max-width: 1199px) {
@@ -207,93 +207,93 @@
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 19px 20px;
+  padding: 19px 30px;
 }
 
 .u-section-2 .u-image-1 {
-  height: 313px;
-  width: 320px;
-  margin: 11px 0 0 auto;
+  height: 393px;
+  margin-top: 1px;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 700;
-  margin: 10px auto 0 10px;
+  margin: 20px auto 0 0;
 }
 
 .u-section-2 .u-text-2 {
-  margin: 20px 10px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-2 .u-btn-1 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: none none solid;
+  border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 10px;
-  padding: 2px 10px 3px;
+  margin: 20px auto 0 0;
+  padding: 2px 12px 3px 10px;
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 19px 20px;
+  padding: 19px 30px;
 }
 
 .u-section-2 .u-image-2 {
-  height: 313px;
-  width: 320px;
-  margin: 11px 0 0 auto;
+  height: 393px;
+  margin-top: 1px;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-3 {
   font-weight: 700;
-  margin: 10px auto 0 10px;
+  margin: 20px auto 0 0;
 }
 
 .u-section-2 .u-text-4 {
-  margin: 20px 10px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-2 .u-btn-2 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: none none solid;
+  border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 10px;
-  padding: 2px 10px 3px;
+  margin: 20px auto 0 0;
+  padding: 2px 12px 3px 10px;
 }
 
 .u-section-2 .u-container-layout-3 {
-  padding: 19px 20px;
+  padding: 19px 30px;
 }
 
 .u-section-2 .u-image-3 {
-  height: 313px;
-  width: 320px;
-  margin: 11px 0 0 auto;
+  height: 393px;
+  margin-top: 1px;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-5 {
   font-weight: 700;
-  margin: 10px auto 0 10px;
+  margin: 20px auto 0 0;
 }
 
 .u-section-2 .u-text-6 {
-  margin: 20px 10px 0;
+  margin: 20px 0 0;
 }
 
 .u-section-2 .u-btn-3 {
   font-size: 1rem;
   letter-spacing: 1px;
-  border-style: none none solid;
+  border-style: solid;
   text-transform: uppercase;
   background-image: none;
   font-weight: 700;
-  margin: 20px auto 0 10px;
-  padding: 2px 10px 3px;
+  margin: 20px auto 0 0;
+  padding: 2px 12px 3px 10px;
 }
 
 @media (max-width: 1199px) {
@@ -307,31 +307,16 @@
     min-height: 309px;
   }
 
-  .u-section-2 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
+  .u-section-2 .u-image-1 {
+    height: 311px;
   }
 
-  .u-section-2 .u-btn-1 {
-    margin-left: 0;
+  .u-section-2 .u-image-2 {
+    height: 311px;
   }
 
-  .u-section-2 .u-text-4 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-btn-2 {
-    margin-left: 0;
-  }
-
-  .u-section-2 .u-text-6 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-2 .u-btn-3 {
-    margin-left: 0;
+  .u-section-2 .u-image-3 {
+    height: 311px;
   }
 }
 
@@ -339,6 +324,18 @@
   .u-section-2 .u-repeater-1 {
     grid-template-columns: repeat(2, 50%);
     min-height: 710px;
+  }
+
+  .u-section-2 .u-image-1 {
+    height: 368px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 368px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 368px;
   }
 }
 
@@ -352,13 +349,425 @@
     padding-right: 10px;
   }
 
+  .u-section-2 .u-image-1 {
+    height: 638px;
+  }
+
   .u-section-2 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
+  .u-section-2 .u-image-2 {
+    height: 638px;
+  }
+
   .u-section-2 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 638px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-image-1 {
+    height: 393px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 393px;
+  }
+
+  .u-section-2 .u-image-3 {
+    height: 393px;
+  }
+}.u-section-3 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-3 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-3 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 16px 30px;
+}
+
+.u-section-3 .u-image-1 {
+  height: 333px;
+  margin-top: 1px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-1 {
+  font-weight: 700;
+  margin: 23px auto 0 0;
+}
+
+.u-section-3 .u-text-2 {
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto -1px 0;
+  padding: 2px 14px 3px 13px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 16px 30px;
+}
+
+.u-section-3 .u-image-2 {
+  height: 333px;
+  margin-top: 1px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-weight: 700;
+  margin: 23px auto 0 0;
+}
+
+.u-section-3 .u-text-4 {
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto -1px 0;
+  padding: 2px 14px 3px 13px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 16px 30px;
+}
+
+.u-section-3 .u-image-3 {
+  height: 333px;
+  margin-top: 1px;
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-text-5 {
+  font-weight: 700;
+  margin: 23px auto 0 0;
+}
+
+.u-section-3 .u-text-6 {
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto -1px 0;
+  padding: 2px 14px 3px 13px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 264px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 264px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 264px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 313px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 313px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 313px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 543px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 543px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 543px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-image-1 {
+    height: 334px;
+  }
+
+  .u-section-3 .u-image-2 {
+    height: 334px;
+  }
+
+  .u-section-3 .u-image-3 {
+    height: 334px;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-4 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-4 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding: 20px 30px;
+}
+
+.u-section-4 .u-image-1 {
+  height: 400px;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-text-1 {
+  font-weight: 700;
+  margin: 13px auto 0 11px;
+}
+
+.u-section-4 .u-text-2 {
+  margin: 7px 0 0;
+}
+
+.u-section-4 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 2px 11px 3px 10px;
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-4 .u-image-2 {
+  height: 400px;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-text-3 {
+  font-weight: 700;
+  margin: 13px auto 0 11px;
+}
+
+.u-section-4 .u-text-4 {
+  margin: 7px 0 0;
+}
+
+.u-section-4 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 2px 11px 3px 10px;
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-4 .u-image-3 {
+  height: 400px;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.u-section-4 .u-text-5 {
+  font-weight: 700;
+  margin: 13px auto 0 11px;
+}
+
+.u-section-4 .u-text-6 {
+  margin: 7px 0 0;
+}
+
+.u-section-4 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 2px 11px 3px 10px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 316px;
+  }
+
+  .u-section-4 .u-image-2 {
+    height: 316px;
+  }
+
+  .u-section-4 .u-image-3 {
+    height: 316px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 374px;
+  }
+
+  .u-section-4 .u-image-2 {
+    height: 374px;
+  }
+
+  .u-section-4 .u-image-3 {
+    height: 374px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-image-1 {
+    height: 648px;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-image-2 {
+    height: 648px;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-image-3 {
+    height: 648px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-image-1 {
+    height: 399px;
+  }
+
+  .u-section-4 .u-image-2 {
+    height: 399px;
+  }
+
+  .u-section-4 .u-image-3 {
+    height: 399px;
   }
 }
