--- a/Baby-Gear.css
+++ b/Baby-Gear.css
@@ -767,7 +767,7 @@
 
 .u-section-5 .u-text-1 {
   font-weight: 700;
-  margin: 20px 13px 0;
+  margin: 20px 14px 0 13px;
 }
 
 .u-section-5 .u-text-2 {
@@ -797,7 +797,7 @@
 
 .u-section-5 .u-text-3 {
   font-weight: 700;
-  margin: 20px 13px 0;
+  margin: 20px 200px 0 13px;
 }
 
 .u-section-5 .u-text-4 {
@@ -827,7 +827,7 @@
 
 .u-section-5 .u-text-5 {
   font-weight: 700;
-  margin: 20px 13px 0;
+  margin: 20px 200px 0 13px;
 }
 
 .u-section-5 .u-text-6 {
@@ -856,6 +856,10 @@
     min-height: 309px;
   }
 
+  .u-section-5 .u-text-1 {
+    margin-right: 13px;
+  }
+
   .u-section-5 .u-text-2 {
     margin-left: 0;
     margin-right: 0;
@@ -865,6 +869,10 @@
     margin-left: 0;
   }
 
+  .u-section-5 .u-text-3 {
+    margin-right: 13px;
+  }
+
   .u-section-5 .u-text-4 {
     margin-left: 0;
     margin-right: 0;
@@ -872,6 +880,10 @@
 
   .u-section-5 .u-btn-2 {
     margin-left: 0;
+  }
+
+  .u-section-5 .u-text-5 {
+    margin-right: 13px;
   }
 
   .u-section-5 .u-text-6 {
@@ -1072,5 +1084,198 @@
 @media (max-width: 767px) {
   .u-section-6 .u-repeater-1 {
     grid-template-columns: 100%;
+  }
+}.u-section-7 .u-sheet-1 {
+  min-height: 552px;
+}
+
+.u-section-7 .u-list-1 {
+  grid-template-rows: auto;
+  margin: 50px 0;
+}
+
+.u-section-7 .u-repeater-1 {
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-7 .u-container-layout-1 {
+  padding: 20px 30px;
+}
+
+.u-section-7 .u-image-1 {
+  height: 320px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-7 .u-text-1 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-text-2 {
+  margin: 20px 0 0;
+}
+
+.u-section-7 .u-btn-1 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none none solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 2px 0;
+}
+
+.u-section-7 .u-container-layout-2 {
+  padding: 20px 30px;
+}
+
+.u-section-7 .u-image-2 {
+  height: 320px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-7 .u-text-3 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-text-4 {
+  margin: 20px 0 0;
+}
+
+.u-section-7 .u-btn-2 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none none solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 2px 0;
+}
+
+.u-section-7 .u-container-layout-3 {
+  padding: 20px 30px;
+}
+
+.u-section-7 .u-image-3 {
+  height: 320px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.u-section-7 .u-text-5 {
+  font-weight: 700;
+  margin: 20px auto 0 0;
+}
+
+.u-section-7 .u-text-6 {
+  margin: 20px 0 0;
+}
+
+.u-section-7 .u-btn-3 {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border-style: none none solid;
+  text-transform: uppercase;
+  background-image: none;
+  font-weight: 700;
+  margin: 20px auto 0 0;
+  padding: 2px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-7 .u-repeater-1 {
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+
+  .u-section-7 .u-image-1 {
+    height: 253px;
+  }
+
+  .u-section-7 .u-image-2 {
+    height: 253px;
+  }
+
+  .u-section-7 .u-image-3 {
+    height: 253px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-repeater-1 {
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+
+  .u-section-7 .u-image-1 {
+    height: 300px;
+  }
+
+  .u-section-7 .u-image-2 {
+    height: 300px;
+  }
+
+  .u-section-7 .u-image-3 {
+    height: 300px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-image-1 {
+    height: 520px;
+  }
+
+  .u-section-7 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-image-2 {
+    height: 520px;
+  }
+
+  .u-section-7 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-image-3 {
+    height: 520px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-image-1 {
+    height: 320px;
+  }
+
+  .u-section-7 .u-image-2 {
+    height: 320px;
+  }
+
+  .u-section-7 .u-image-3 {
+    height: 320px;
   }
 }
